# temper-influxdb

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml  grafana-influxdb.yaml  pyproject.toml  requirements.txt  setup.cfg
docs/: README.md
images/: Makefile  overview.drawio
temper/: Dockerfile  main.py  temper.c.patch
temper_influxdb/: main.py
