[tool.poetry]
name = "temper-influxdb"
version = "0.1.0"
description = "Write TEMPerature data to InfluxDB"
authors = ["Hideyuki KATO <hideyuki@kato.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
influxdb-client = "^1.44.0"
schedule = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"
black = "^24.4.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
temper-influxdb = "temper_influxdb.main:main"
